[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = "Web based REST API."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "GP3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
Markdown = "^3.3.4"
geopy = "^2.1.0"
aiohttp = "^3.7.4"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
PyGithub = "^1.55"
pytz = "^2021.1"
urllib3 = "^1.26.5"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
